# LEAF

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: HANDOFF_20260415_dynamic_tree_locomo_check.md  INGEST_SEARCH_REALITY_CHECK_20260416.md  agentic_memory_design.md  experiment_log_20260416.md  experiment_log_20260417.md  experiment_log_20260418.md  experiment_log_20260515_agentic_memory.md  gpt54mini_base_vs_evolved_results_20260518.md  latest_experiment_protocol.md  locomo_reproduction.md
examples/: chat_loop.py  config.yaml  demo_conversation.json
scripts/: analyze_locomo_evidence_flow.py  apply_memory_patch_proposal.py  apply_overlay_policy_patch.py  apply_topic_split_proposal.py  backfill_active_memory_view_assignments.py  backfill_derived_snapshots.py  backfill_entity_bridges.py  backfill_entity_facets.py  build_additive_memory_sidecar.py  build_gvd_gold.py  build_memory_failure_log.py  build_memory_overlay_sidecar_view.py  build_memory_overlay_view.py  build_selfqa_from_memory.py  build_topic_profiles.py  combine_locomo_policy.py  compare_memory_view_eval.py  estimate_locomo_memory_llm_prompt_tokens.py  eval_gvd.py  eval_gvd_evidence.py  eval_gvd_with_gold.py  eval_locomo.py  eval_locomo_leaf.py  eval_locomo_qa_only_parallel.py  eval_memory_search.py  evaluate_memory_view_gate.py  evaluate_selfqa_topic_patch_gate.py  evolve_topic_view_from_shadow.py  ingest_locomo.py  init_agentic_memory_view.py  judge_gvd_gold_ref.py  judge_gvd_reports.py  judge_locomo_report.py  launch_current_judge6_parallel_20260518.sh  learn_topic_soft_policy.py  (+15 more)
(+21 files in other folders)
